deploy/k8s/base/allinone-shared/bootstrap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bootstrap
  name: bootstrap
  namespace: allinone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bootstrap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: bootstrap
    spec:
      serviceAccountName: sa-allinone
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: bootstrap
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - -bootstrap=1
            - -miner=0
            - -blockassembly=0
            - -blobserver=0
            - -blockvalidation=0
            - -blockchain=0
            - -coinbase=0
            - -seeder=0
            - -validator=0
            - -propagation=0
            - -p2p=0
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/IMAGE:TAG
          imagePullPolicy: IfNotPresent
          name: bootstrap
          ports:
            - containerPort: 8089
              protocol: TCP
            - containerPort: 8099
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
