deploy/k8s/base/allinone-shared/coinbase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coinbase
  namespace: coinbase-service
  labels:
    app: coinbase
    project: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coinbase
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: coinbase
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: coinbase
                topologyKey: "kubernetes.io/hostname"
      tolerations:
        - key: service
          value: coinbase
          operator: Equal
          effect: NoSchedule
      containers:
        - name: coinbase
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/IMAGE:TAG
          args: [ "-coinbase=1" ]
          ports:
            - containerPort: 8093
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            requests:
              memory: 5Gi
              cpu: "2"
            limits:
              memory: 5Gi
              cpu: "2"
          readinessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
