deploy/k8s/base/allinone-shared/tx-blaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tx-blaster
  namespace: allinone-miner
  labels:
    app: tx-blaster
    project: service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: tx-blaster
  template:
    metadata:
      labels:
        app: tx-blaster
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: tx-blaster
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: tx-blaster
          image: 434394763103.dkr.ecr.eu-north-1.amazonaws.com/ubsv:d735642cb4f413067d314a0b1dff14b66c1b3adc
          command:
            - ./blaster.run
          args: [ "-workers=100" ]
          ports:
            - containerPort: 8086
              protocol: TCP
            - containerPort: 9091
              protocol: TCP
            - containerPort: 9092
              protocol: TCP
            - containerPort: 4040
              protocol: TCP
          resources:
            requests:
              memory: 2Gi
              cpu: "4"
            limits:
              memory: 2Gi
              cpu: "4"
          readinessProbe:
            httpGet:
              path: /health
              port: 9092
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9092
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 3
