deploy/k8s/base/allinone-shared/bootstrap-http-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: bootstrap-ingressroute-http-8089
  namespace: allinone-miner
spec:
  entryPoints:
    - bootstrap-grpc
  routes:
    - match: HostSNI(`bootstrap.allinone.ubsv.dev`)
      services:
        - name: bootstrap-service
          port: 8089
  tls:
    passthrough: true
