deploy/k8s/base/allinone-shared/coinbase-grpc-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: miner-ingressroute-tcp-8093
spec:
  entryPoints:
    - coin-grpc
  routes:
    - match: HostSNI(`coinbase.allinone.ubsv.dev`)
      services:
        - name: miner
          port: 8093
  tls:
    passthrough: true
